saveDebtPositionTypeOrgOperatorsForOperator
